--- a/resources/css/Colors.css
+++ b/resources/css/Colors.css
@@ -6,7 +6,9 @@
     --light-blue: #a2c0f8;
     --white: #FFFFFF;
     --light-grey: #ebebeb;
-    --hover-blue: #96d5ff9c;
     --red: #eb2564;
+    --hover-light: #d7d7d76e;
+    --hover-black: #151515d5;
+    --hover-blue: #96d5ff;
     --hover-red: #ff96c29c;
 }
