--- a/resources/css/ButtonGlow.css
+++ b/resources/css/ButtonGlow.css
@@ -11,7 +11,7 @@
     font-family: inherit;
     font-size: 16px;
     font-weight: 500;
-    border-radius: 11px;
+    border-radius: 2rem;
     position: relative;
     line-height: 24px;
     cursor: pointer;
