--- a/resources/css/Colors.css
+++ b/resources/css/Colors.css
@@ -6,6 +6,7 @@
     --light-blue: #a2c0f8;
     --white: #FFFFFF;
     --light-grey: #ebebeb;
+    --grey: #636363;
     --red: #eb2564;
     --hover-light: #d7d7d76e;
     --hover-black: #151515d5;
