--- a/resources/css/Colors.css
+++ b/resources/css/Colors.css
@@ -11,5 +11,6 @@
     --hover-light: #d7d7d76e;
     --hover-black: #151515d5;
     --hover-blue: #96d5ff;
+    --hover-lightblue: #b1d8f276;
     --hover-red: #ff96c29c;
 }
