--- a/resources/css/Colors.css
+++ b/resources/css/Colors.css
@@ -8,6 +8,7 @@
     --light-grey: #ebebeb;
     --grey: #636363;
     --red: #eb2564;
+    --disabled: #818080;
     --hover-light: #d7d7d76e;
     --hover-black: #151515d5;
     --hover-blue: #96d5ff;
