--- a/resources/css/Colors.css
+++ b/resources/css/Colors.css
@@ -7,11 +7,14 @@
     --white: #FFFFFF;
     --light-grey: #ebebeb;
     --grey: #636363;
-    --red: #eb2564;
+    --red: #f4212e;
+    --pink: #fdc9ce;
+    --like-red: #eb2564;
     --disabled: #818080;
     --hover-light: #d7d7d76e;
     --hover-black: #151515d5;
     --hover-blue: #96d5ff;
     --hover-lightblue: #b1d8f276;
     --hover-red: #ff96c29c;
+    --hover-like-red: #f4212e33;
 }
