--- a/resources/css/Colors.css
+++ b/resources/css/Colors.css
@@ -13,7 +13,7 @@
     --disabled: #818080;
     --hover-light: #d7d7d76e;
     --hover-black: #151515d5;
-    --hover-blue: #96d5ff;
+    --hover-blue: #2c9ce6;
     --hover-lightblue: #b1d8f276;
     --hover-like-red: #ff96c29c;
     --hover-red: #f4212e33;
