Progressbar and other default settings improvements

--- a/public/piano/css/Interface.css
+++ b/public/piano/css/Interface.css
@@ -59,7 +59,9 @@
 	z-index: -5;
 }
 #piano-viewer #progressBarCanvas {
-	background-color: var(--inputBgColor);
+	background-color: var(--grey);
+	padding-left: 1rem;
+	padding-right: 1rem;
 	box-sizing: border-box;
 	left: 0px;
 	position: absolute;
