--- a/resources/css/Colors.css
+++ b/resources/css/Colors.css
@@ -1,6 +1,6 @@
 :root {
     --dark: #0d162c;
-    --dark-gray: #1c1c1c;
+    --dark-gray: #4b4a4a54;
     --main-blue: #0a4de8;
     --oled: black;
     --blue: #2563eb;
@@ -17,6 +17,7 @@
     --disabled: #818080;
     --hover-light: #d7d7d745;
     --hover-black: #151515d5;
+    --hover-dark-gray: #3b3b3b7d;
     --hover-blue: #2c9ce660;
     --hover-lightblue: #b1d8f276;
     --hover-like-red: #ff96c29c;
