--- a/resources/css/Colors.css
+++ b/resources/css/Colors.css
@@ -18,7 +18,7 @@
     --hover-light: #d7d7d745;
     --hover-black: #151515d5;
     --hover-dark-gray: #3b3b3b7d;
-    --hover-blue: #2c9ce660;
+    --hover-blue: #1e53c6;
     --hover-lightblue: #b1d8f276;
     --hover-like-red: #ff96c29c;
     --hover-red: #dd1b28fe;
