--- a/resources/js/App.css
+++ b/resources/js/App.css
@@ -207,8 +207,11 @@ pre {
 .p-progressbar .p-progressbar-value {
   background-color: var(--main-blue) !important;
 }
-
 .p-progressbar {
   border-radius: 0 !important;
   height: 0.25rem !important;
+}
+.p-image-preview {
+  transform: rotate(0deg) scale(2.5) !important;
+  border-radius: 99999px;
 }
